--- a/ex-1/index.html
+++ b/ex-1/index.html
@@ -1,16 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Responsive Web Design - Ex 2</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
-  <title>Responsive Web Design - Ex 2</title>
-</head>
-
-<body>
-  <!-- Start coding here -->
-</body>
-
+  <body>
+    <!-- Start coding here -->
+    <div class="container">
+      <div class="container-1">
+        <h2>Browse by <br />Job Categories</h2>
+        <div class="box-1">
+          <div class="item-1">
+            <div>👽</div>
+            <div class="i1">
+              <div class="icon-1">
+                <h4>Digital Marketing</h4>
+                <p>143 jobs Opened</p>
+              </div>
+              <div class="icon-2">➜</div>
+            </div>
+          </div>
+          <div class="item-2">
+            <div>👽</div>
+            <div class="i1">
+              <div class="icon-1">
+                <h4>Digital Marketing</h4>
+                <p>143 jobs Opened</p>
+              </div>
+              <div class="icon-2">➜</div>
+            </div>
+          </div>
+          <div class="item-3">
+            <div>👽</div>
+            <div class="i1">
+              <div class="icon-1">
+                <h4>Digital Marketing</h4>
+                <p>143 jobs Opened</p>
+              </div>
+              <div class="icon-2">➜</div>
+            </div>
+          </div>
+          <div class="item-4">
+            <div>👽</div>
+            <div class="i1">
+              <div class="icon-1">
+                <h4>Digital Marketing</h4>
+                <p>143 jobs Opened</p>
+              </div>
+              <div class="icon-2">➜</div>
+            </div>
+          </div>
+        </div>
+        <div class="box-2">
+          <div class="item-5">
+            <div>👽</div>
+            <div class="i1">
+              <div class="icon-1">
+                <h4>Digital Marketing</h4>
+                <p>143 jobs Opened</p>
+              </div>
+              <div class="icon-2">➜</div>
+            </div>
+          </div>
+          <div class="item-6">
+            <div>👽</div>
+            <div class="i1">
+              <div class="icon-1">
+                <h4>Digital Marketing</h4>
+                <p>143 jobs Opened</p>
+              </div>
+              <div class="icon-2">➜</div>
+            </div>
+          </div>
+          <div class="item-7">
+            <div>👽</div>
+            <div class="i1">
+              <div class="icon-1">
+                <h4>Digital Marketing</h4>
+                <p>143 jobs Opened</p>
+              </div>
+              <div class="icon-2">➜</div>
+            </div>
+          </div>
+          <div class="item-8">
+            <div>
+              <h3>Explore <br />30more <br />Categories</h3>
+            </div>
+            <div>➜</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
