feat: add job search page and style

--- a/ex-1/index.html
+++ b/ex-1/index.html
@@ -1,16 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/706882c445.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="style.css" />
+    <title>Responsive Web Design - Ex 2</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
-  <title>Responsive Web Design - Ex 2</title>
-</head>
+  <body>
+    <header>
+      Browse by <br />
+      <span>Job</span> Categories
+    </header>
+    <div class="container">
+      <div class="content" id="no1">
+        <!--Digital Marketing-->
+        <div class="box">
+          <div class="circle">
+            <i class="fa-solid fa-bullhorn"></i>
+          </div>
+          <p class="title">Digital Marketing</p>
+          <p class="result">143 Jobs Opended</p>
+          <div class="pointer"><i class="fa-solid fa-arrow-right"></i></div>
+        </div>
 
-<body>
-  <!-- Start coding here -->
-</body>
+        <!--Art & Design-->
+        <div class="box">
+          <div class="circle">
+            <i class="fa-solid fa-pen-nib"></i>
+          </div>
+          <p class="title">Art & Design</p>
+          <p class="result">110 Jobs Opended</p>
+          <div class="pointer"><i class="fa-solid fa-arrow-right"></i></div>
+        </div>
 
+        <!--Accounting-->
+        <div class="box">
+          <!--div class="circle" id="bold">💲</div>-->
+          <div class="circle" id="bold">
+            <i class="fa-solid fa-dollar-sign"></i>
+          </div>
+          <p class="title">Accounting</p>
+          <p class="result">158 Jobs Opended</p>
+          <div class="pointer"><i class="fa-solid fa-arrow-right"></i></div>
+        </div>
+
+        <!--Photography-->
+        <div class="box">
+          <div class="circle">
+            <i class="fa-solid fa-camera"></i>
+          </div>
+          <p class="title">Photography</p>
+          <p class="result">95 Jobs Opended</p>
+          <div class="pointer"><i class="fa-solid fa-arrow-right"></i></div>
+        </div>
+      </div>
+
+      <div class="content" id="no2">
+        <!--Copy Writing-->
+        <div class="box">
+          <div class="circle">
+            <i class="fa-solid fa-pen-to-square"></i>
+          </div>
+          <p class="title">Copy Writing</p>
+          <p class="result">113 Jobs Opended</p>
+          <div class="pointer">
+            <i class="fa-solid fa-arrow-right"></i>
+          </div>
+        </div>
+
+        <!--Music-->
+        <div class="box">
+          <div class="circle">
+            <i class="fa-solid fa-headphones"></i>
+          </div>
+          <p class="title">Music</p>
+          <p class="result">55 Jobs Opended</p>
+          <div class="pointer"><i class="fa-solid fa-arrow-right"></i></div>
+        </div>
+
+        <!--Human Resources-->
+        <div class="box">
+          <div class="circle">
+            <i class="fa-solid fa-people-robbery"></i>
+          </div>
+          <p class="title">Human Resources</p>
+          <p class="result">25 Jobs Opended</p>
+          <div class="pointer"><i class="fa-solid fa-arrow-right"></i></div>
+        </div>
+
+        <!--More-->
+        <div class="box" id="bold">
+          <p class="lasttitle">
+            Explore <br />
+            More <br />Categories
+          </p>
+          <div class="lastpointer">
+            <i class="fa-solid fa-arrow-right" id="last"></i>
+          </div>
+        </div>
+
+        <!--End-->
+      </div>
+    </div>
+  </body>
 </html>
